--- a/Makefile.rh
+++ b/Makefile.rh
@@ -27,7 +27,7 @@ COMMON =  Atmos.com Dummy.com Equivs.com Factor.com Kappa.com Linex.com \
         Quants.com Multimod.com Dampdat.com
 
 CC = cc
-FC = gfortran -Wall
+FC = gfortran -Wall -g
 #FC = f77 -Wall
 
 # the following lines point to some needed libraries
